RESOLVED FIXED265012
[WGSL] Loop statement is not implemented - https://www.w3.org/TR/WGSL/#loop-statement
https://bugs.webkit.org/show_bug.cgi?id=265012
Summary [WGSL] Loop statement is not implemented - https://www.w3.org/TR/WGSL/#loop-s...
Mike Wyrzykowski
Reported 2023-11-17 00:16:46 PST
[WGSL] Loop statement is not implemented - https://www.w3.org/TR/WGSL/#loop-statement Noticed this opening https://playground.babylonjs.com/#P1RZV0
Attachments
Radar WebKit Bug Importer
Comment 1 2023-11-17 00:17:00 PST
Tadeu Zagallo
Comment 2 2023-11-22 09:33:16 PST
EWS
Comment 3 2023-11-23 01:59:19 PST
Committed 271071@main (342939b92884): <https://commits.webkit.org/271071@main> Reviewed commits have been landed. Closing PR #20824 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.